--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -1,3 +1,5 @@
 "VCreateBar_buttonCancel"="Cancel";
 "VCreateBar_buttonDone"="Done";
 "VCreateBar_labelTitle"="New note";
+
+"MCreateFrame_defaultTitle"="Text";
