button done in text view

--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -1,5 +1,6 @@
 "VCreateBar_buttonCancel"="Cancel";
 "VCreateBar_buttonDone"="Done";
 "VCreateBar_labelTitle"="New note";
+"VCreateCellCardBar_titleButton"="Done";
 
 "MCreateFrame_defaultText"="Text";
