--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "VCreateBar_buttonCancel"="Cancel";
-"VCreateBar_buttonDone"="Done";
+"VCreateBar_buttonDone"="Save";
 "VCreateBar_labelTitle"="New note";
 "VCreateCellCardBar_titleButton"="Done";
 
