--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 "VCreateBar_buttonCancel"="Cancel";
 "VCreateBar_buttonDone"="Save";
 "VCreateBar_labelTitle"="New note";
-"VCreateCellCardBar_titleButton"="Done";
+"VCreateCellCardBar_titleButtonDone"="Done";
+"VCreateCellCardBar_titleButtonClear"="Clear";
 
 "MCreateFrame_defaultText"="Text";
