--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -3,5 +3,6 @@
 "VCreateBar_labelTitle"="New note";
 "VCreateCellCardBar_titleButtonDone"="Done";
 "VCreateCellCardBar_titleButtonClear"="Clear";
+"VCreateCellDurationSlider_secondsSuffix"=" secs";
 
 "MCreateFrame_defaultText"="Text";
