--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -5,5 +5,6 @@
 "VCreateCellCardBar_titleButtonClear"="Clear";
 "VCreateCellDurationSlider_secondsSuffix"=" secs";
 "VCreateCellTimelineCell_secondsSuffix"="secs";
+"VCreateCellFontNameCell_labelType"="A";
 
 "MCreateFrame_defaultText"="Text";
