--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -5,7 +5,7 @@
 "VCreateCellCardBar_titleButtonClear"="Clear";
 "VCreateCellDuration_secondsSuffix"=" secs";
 "VCreateCellFontSize_pointSize"=" points";
-"VCreateCellTimelineCell_secondsSuffix"="secs";
+"VCreateCellTimelineCell_secondsSuffix"=" s";
 "VCreateCellFontNameCell_labelType"="Aa";
 
 "MCreateFrame_defaultText"="Text";
