home collection view footer

--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -8,5 +8,6 @@
 "VCreateCellTimelineCell_secondsSuffix"=" s";
 "VCreateCellFontNameCell_labelType"="Aa";
 "VHomeBar_buttonNew"="New";
+"VHomeFooter_label"="You have no notes";
 
 "MCreateFrame_defaultText"="Text";
