--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "VHomeBar_labelTitle"="Punky";
 
 "MCreateFrame_defaultText"="Text";
+"MShareScaleX1_title"="x1";
 
 "CHome_deleteAlertTitle"="Delete note?";
 "CHome_deleteAlertCancel"="Cancel";
