button share and title gif

--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "VHomeBar_labelTitle"="Punky";
 "VShareCellScaleCell_labelTitle"="x%@";
 "VShareCellScaleCell_labelDescr"="%@x%@";
+"VShareCellGif_labelTitle"="Animated GIF";
 
 "MCreateFrame_defaultText"="Text";
 
