--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "CHome_deleteAlertCancel"="Cancel";
 "CHome_deleteAlertDelete"="Delete";
 "CShare_errorImage"="Error creating image";
+"CShare_errorGif"="Error creating gif";
