--- a/punknote/Support/Resource/en.lproj/Localizable.strings
+++ b/punknote/Support/Resource/en.lproj/Localizable.strings
@@ -1,5 +1,6 @@
 "VCreateBar_buttonCancel"="Cancel";
 "VCreateBar_buttonDone"="Save";
+"VCreateBar_labelTitleEdit"="Edit note";
 "VCreateBar_labelTitle"="New note";
 "VCreateCellCardBar_titleButtonDone"="Done";
 "VCreateCellCardBar_titleButtonClear"="Clear";
